# agents-extractor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
cv/: GUSTAVO_SALGADO_CV.md
deploy/: setup-ec2.sh
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  ThemeContext.tsx  api.ts  main.tsx  theme.ts  types.ts
infra/: .gitignore  main.tf  push-image.sh  terraform.tfvars.example  user-data.sh.tpl
portal/: README.md  index.html  package-lock.json
portal/src/: App.tsx  SubmissionView.tsx
scripts/: README.md  generate_advanced_test_pdfs.py  generate_test_pdfs.py
src/submission_platform/: README.md  config.py
test-files/: README.md
test-files/scenario-01-complete-with-loss-runs/: README.md
test-files/scenario-02-new-business-no-loss-runs/: README.md
test-files/scenario-03-incomplete-application/: README.md
test-files/scenario-04-partial-loss-runs/: README.md
test-files/scenario-05-multi-location-high-risk/: README.md
test-files/scenario-06-renewal-changed-limits/: README.md
test-files/scenario-07-spanish-submission/: README.md
test-files/scenario-08-multiple-entities/: README.md
test-files/scenario-09-bare-minimum/: README.md
test-files/scenario-10-contradictory-info/: README.md
test-files/scenario-11-follow-up-thread/: README.md
test-files/scenario-12-duplicate-from-different-broker/: README.md
tests/: README.md  conftest.py
tests/test_api/: test_advanced_routes.py  test_routes.py
(+56 files in other folders)
